add something to readme file
annouce which programming language i want to use with this app

--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 this is a web app that allows people to remember english words within what they have read.
+by the way,i want to write this app using python.
